adds options and data props to chart component + creates country detail module

--- a/app/scripts/components/Ranking/ranking-template.html
+++ b/app/scripts/components/Ranking/ranking-template.html
@@ -8,7 +8,7 @@
     >
       <span class="list-item-index">{{index + 1}}</span>
       {{item.properties.name}}
-      <chart-component :options="item.properties" :container="item.id"></chart-component>
+      <chart-component :options="chartOptions" :chart-data="item.properties" :container="item.id"></chart-component>
     </li>
   </ul>
 </div>
