Centered modal type

--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -12,7 +12,7 @@
   <map-component></map-component>
   <map-footer-component></map-footer-component>
 
-  <modal-component :open="openModal" :close="closeModal">
+  <modal-component :open="openModal" :close="closeModal" class="-center">
     <div class="row expanded">
       <div class="column small-12 align-middle flex">
         <share-component v-if="modalContent === 'share'"></share-component>
