--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -9,6 +9,18 @@
   z-index: 999999999;
   top: 0;
 
+  &.-center {
+    background-color: rgba(0, 0, 0, .5);
+
+    .modal-content {
+      position: absolute;
+      min-height: inherit;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
   .modal-content {
     position: relative;
     width: 50vw;
