--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -1,8 +1,8 @@
 <div class="c-share">
   <h3 class="share-title">Share this page</h3>
   <div class="share-url-container">
-    <input readonly class="share-input" type="text" v-bind:value="sharedUrl">
-    <button class="c-button -filled" type="button">Copy</button>
+    <input readonly id="copyInput" class="share-input" type="text" v-bind:value="sharedUrl">
+    <button class="c-button -filled" type="button" @click="handleCopy">Copy</button>
   </div>
   <ul class="share-links">
     <li class="share-links-item">
