Share url in social networks

--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -6,12 +6,12 @@
   </div>
   <ul class="share-links">
     <li class="share-links-item">
-      <a href="#">
+      <a :href="facebookEncondedUrl" data-social="Facebook" target="_blank" class="c-btn -primary -with-icon -facebook js-btn-share-social" type="button" name="button">
         <icon-component class="-small" name="icon-facebook"></icon-component>
       </a>
     </li>
     <li class="share-links-item">
-      <a href="#">
+      <a :href="twitterEncondedUrl" data-social="Twitter" target="_blank" class="c-btn -primary -with-icon -twitter js-btn-share-social" type="button" name="button">
         <icon-component class="-small" name="icon-twitter"></icon-component>
       </a>
     </li>
