--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -1,10 +1,10 @@
 <div class="c-visualization l-visualization">
-  <header class="visualization-header">
+  <!-- <header class="visualization-header">
     <router-link to="/" class="header-logo">
       <img :src="d4sdgLogo">
     </router-link>
     <h2 class="header-title">Forests in conflict</h2>
-  </header>
+  </header> -->
   <button @click="toggleModal" class="share-button" type="button">
     <icon-component class="-small" name="icon-share"></icon-component>
   </button>
