--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -6,4 +6,21 @@
 
   background-color: transparent;
   color: $base-bg-color;
+
+  &.-over {
+    z-index: 102;
+    background-color: rgba(0, 0, 0, .3);
+
+    .header-logo {
+      transform: translate(-96px, -8px);
+
+      img {
+        max-width: 78%;
+      }
+    }
+
+    nav ul {
+      margin-bottom: 0;
+    }
+  }
 }
