Map zoom controls and share button repositioned

--- a/app/scripts/components/Share/share-style.scss
+++ b/app/scripts/components/Share/share-style.scss
@@ -40,8 +40,8 @@
   height: 35px;
   display: inline-block;
   background-color: $mexican-pink;
-  top: 9.75rem;
-  right: 3.125rem;
+  bottom: rem(120);
+  right: rem(72);
   border-radius: 0;
   display: flex;
   align-items: center;
