--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -27,11 +27,12 @@
   .leaflet-control-container {
     .leaflet-left {
       left: auto!important;
-      right: rem(50) !important;
+      right: rem(72) !important;
     }
 
     .leaflet-top {
-      top: rem(50)!important;
+      top: auto;
+      bottom: rem(176)!important;
       z-index: 9999999999!important;
     }
   }
