--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -1,17 +1,17 @@
 <div class="c-share">
   <h3 class="share-title">Share this page</h3>
   <div class="share-url-container">
-    <input readonly id="copyInput" class="share-input" type="text" v-bind:value="sharedUrl">
+    <input readonly ref="copyInput" class="share-input" type="text" v-bind:value="sharedUrl">
     <button class="c-button -filled" type="button" @click="handleCopy">Copy</button>
   </div>
   <ul class="share-links">
     <li class="share-links-item">
-      <a :href="facebookEncondedUrl" data-social="Facebook" target="_blank" class="c-btn -primary -with-icon -facebook js-btn-share-social" type="button" name="button">
+      <a :href="facebookEncodedUrl" target="_blank" type="button" name="button">
         <icon-component class="-small" name="icon-facebook"></icon-component>
       </a>
     </li>
     <li class="share-links-item">
-      <a :href="twitterEncondedUrl" data-social="Twitter" target="_blank" class="c-btn -primary -with-icon -twitter js-btn-share-social" type="button" name="button">
+      <a :href="twitterEncodedUrl" target="_blank" type="button" name="button">
         <icon-component class="-small" name="icon-twitter"></icon-component>
       </a>
     </li>
