Protected areas carto layer

--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -10,13 +10,13 @@
   <div class="layers-switch">
     <h4>GLAD - iTerra Alerts</h4>
     <ul class="c-legend">
-      <li class="legend-item">
+     <!--  <li class="legend-item">
         <div class="switch">
           <input type="checkbox" name="forests" @click="toggleLayer">
           <span class="toggle"></span>
         </div>
         Confirmed Deforestation Areas
-      </li>
+      </li> -->
 
       <li class="legend-item">
         <div class="switch">
@@ -38,10 +38,10 @@
   </div>
   <div class="legend-spec">
     <ul class="c-legend">
-      <li class="legend-item">
+      <!-- <li class="legend-item">
         <span class="spec -square -orange"></span>
         Confirmed Deforestation Areas
-      </li>
+      </li> -->
 
       <li class="legend-item">
         <span class="spec -square -blue"></span>
