Layer own list legend

--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -22,6 +22,10 @@
     .leaflet-popup-content-wrapper {
       border-radius: 0;
     }
+
+    h3 {
+      text-align: center;
+    }
   }
 
   .leaflet-control-container {
