--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -10,6 +10,14 @@
   <div class="layers-switch">
     <h4>GLAD - iTerra Alerts</h4>
     <ul class="c-legend">
+      <li class="legend-item">
+        <div class="switch -hidden">
+          <input type="checkbox" name="alerts" @click="toggleLayer">
+          <span class="toggle"></span>
+        </div>
+        Deforestation Alerts
+      </li>
+
      <!--  <li class="legend-item">
         <div class="switch">
           <input type="checkbox" name="forests" @click="toggleLayer">
@@ -25,33 +33,69 @@
         </div>
         Protected Areas
       </li>
-
-      <li class="legend-item">
-        <div class="switch -hidden">
-          <input type="checkbox" name="alerts" @click="toggleLayer">
-          <span class="toggle"></span>
-        </div>
-        Deforestation Alerts
-      </li>
       <spinner-component :loading="layerLoading" :overlay="true" class="-absolute"></spinner-component>
     </ul>
   </div>
   <div class="legend-spec">
     <ul class="c-legend">
+      <li class="legend-item">
+        <span class="spec -dot -yellow"></span>
+        Deforestation Alerts
+      </li>
       <!-- <li class="legend-item">
         <span class="spec -square -orange"></span>
         Confirmed Deforestation Areas
       </li> -->
 
-      <li class="legend-item">
-        <span class="spec -square -blue"></span>
-        Protected Areas
+      <li class="legend-item -list">
+        <button @click="showLayerLegend">
+          <span class="arrow"></span>
+          Protected Areas
+        </button>
+        <ul>
+          <li class="legend-item">
+            <span class="spec -square -ia"></span>
+            Ia
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -ib"></span>
+            Ib
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -ii"></span>
+            II
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -iii"></span>
+            III
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -iv"></span>
+            IV
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -v"></span>
+            V
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -vi"></span>
+            VI
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -notApplicable"></span>
+            Not Applicable
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -notAssigned"></span>
+            Not Assigned
+          </li>
+          <li class="legend-item">
+            <span class="spec -square -notReported"></span>
+            Not Reported
+          </li>
+        </ul>
       </li>
 
-      <li class="legend-item">
-        <span class="spec -dot -yellow"></span>
-        Deforestation Alerts
-      </li>
       <spinner-component :loading="layerLoading" :overlay="true" class="-absolute"></spinner-component>
     </ul>
   </div>
