--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -1,28 +1,42 @@
 <div class="c-header">
-  <div class="row align-top align-justify">
-    <div class="columns small-4 medium-2 medium-offset-1">
+  <div class="header-section -lead">
+    <div class="header-wrapper">
+
       <router-link to="/" class="header-logo">
         <img :src="d4sdgLogo">
       </router-link>
-    </div>
 
-    <div class="columns small-5 medium-4 medium-offset-5">
-      <nav>
+      <nav class="nav -primary">
         <ul>
-          <router-link active-class="-active" class="header-tab" tag="li" to="/" exact>
+          <router-link active-class="-active" tag="li" to="/" exact>
             <a>About Us</a>
           </router-link>
 
-          <router-link active-class="-active" class="header-tab" tag="li" to="/playground">
+          <router-link active-class="-active" tag="li" to="/playground">
             <a>Playground</a>
           </router-link>
 
-          <router-link active-class="-active" class="header-tab" tag="li" to="/countries">
+          <router-link active-class="-active" tag="li" to="/countries">
             <a>Countries</a>
           </router-link>
 
-          <router-link active-class="-active" class="header-tab" tag="li" to="/map">
-            <a>Map</a>
+          <router-link active-class="-active" tag="li" to="/examples/">
+            <a>Examples</a>
+          </router-link>
+        </ul>
+      </nav>
+
+    </div>
+  </div>
+  <div class="header-section -secondary">
+    <div class="header-wrapper">
+      <nav class="nav -secondary">
+        <ul>
+          <router-link active-class="-active" tag="li" to="/examples/1" exact>
+            <a>Regions with greatests water risks</a>
+          </router-link>
+          <router-link active-class="-active" tag="li" to="/examples/2" exact>
+            <a>Conflicts related to protected areas</a>
           </router-link>
         </ul>
       </nav>
