--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -88,10 +88,10 @@ nav > ul {
   display: flex;
   list-style: none;
   padding: 0;
+  margin: 0;
 
   & > li {
     list-style: none;
-    margin: 0 10px;
   }
 }
 
