--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -71,3 +71,19 @@ $footer-height: 10vh;
 
 // Visualization
 $visualization-padding-side: 72px;
+
+/*
+  Animation
+*/
+
+// Times
+$transition-duration: .3s;
+
+// Eases
+$ease-in-cubic: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+$ease-out-cubic: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+$ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1.000);
+
+$ease-in-sine: cubic-bezier(0.470, 0.000, 0.745, 0.715);
+$ease-out-sine: cubic-bezier(0.390, 0.575, 0.565, 1.000);
+$ease-in-out-sine: cubic-bezier(0.445, 0.050, 0.550, 0.950);
