Conects real conflict data to map

--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -48,7 +48,7 @@
       </li> -->
 
       <li class="legend-item -list">
-        <button @click="showLayerLegend">
+        <button ref="protectedAreas" @click="showLayerLegend">
           <span class="arrow"></span>
           Protected Areas
         </button>
