Footer and link fixes

--- a/app/scripts/components/Button/button-style.scss
+++ b/app/scripts/components/Button/button-style.scss
@@ -4,6 +4,7 @@
 .c-button {
   font-size: $font-size-xsmall;
   text-transform: uppercase;
+  text-align: center;
 
   background-color: transparent;
   color: $button-font-color;
