--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -16,12 +16,8 @@
             <a>Playground</a>
           </router-link>
 
-          <router-link active-class="-active" tag="li" to="/countries">
-            <a>Countries</a>
-          </router-link>
-
           <router-link active-class="-active" tag="li" to="/examples/">
-            <a>Examples</a>
+            <a class="-disabled">Examples</a>
           </router-link>
         </ul>
       </nav>
