--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -4,7 +4,7 @@
     <div class="column small-11 medium-6 small-offset-1 medium-offset-1 hero-home-content">
       <h2>Transform data on SDGs into effective applications and visualisations</h2>
       <div class="c-button-group">
-        <button-component class="-bordered -big" :click="goToFindOutMore">Find Out More</button-component>
+        <a class="c-button -bordered -big" href="https://gpsdd.github.io/playbook/" target="_blank">Find Out More</a>
       </div>
     </div>
   </div>
