--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -57,7 +57,7 @@
               Learn how to turn your SDG data into data services and
               make it available to millions of software developers.
             </p>
-            <a class="link-column-action">Read Playbook</a>
+            <a href="https://gpsdd.github.io/playbook/" target="_blank" class="link-column-action">Read Playbook</a>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
               All software used in the making of the developer playground is open source
               and available online. Take a look and if you want, contribute!
             </p>
-            <a class="link-column-action">Source Code</a>
+            <a href="https://github.com/GPSDD" target="_blank" class="link-column-action">Source Code</a>
           </div>
         </div>
       </div>
