--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -8,7 +8,7 @@
       </li>
       <li>
         <a href="http://www.vizzuality.com/" target="_blank">
-          <img src="static/logos/vizzuality.jpg" class="vizz-logo">
+          <icon-component name="icon-vizz" class="vizz-logo"></icon-component>
         </a>
       </li>
     </ul>
