--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -17,7 +17,7 @@
           </router-link>
 
           <router-link active-class="-active" tag="li" to="/examples/">
-            <a class="-disabled">Examples</a>
+            <a>Examples</a>
           </router-link>
         </ul>
       </nav>
@@ -29,10 +29,10 @@
       <nav class="nav -secondary">
         <ul>
           <router-link active-class="-active" tag="li" to="/examples/1" exact>
-            <a>Regions with greatests water risks</a>
+            <a>Conflicts related to protected areas</a>
           </router-link>
           <router-link active-class="-active" tag="li" to="/examples/2" exact>
-            <a>Conflicts related to protected areas</a>
+            <a class="-disabled">Regions with greatests water risks</a>
           </router-link>
         </ul>
       </nav>
