--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -50,10 +50,6 @@
     a {
       padding: 20px 0;
       display: block;
-      &.-disabled {
-        opacity: .5;
-        pointer-events: none;
-      }
     }
     li {
       position: relative;
@@ -103,8 +99,11 @@
       font-size: 16px;
       letter-spacing: .4px;
       transition: opacity linear .1s;
-      &:hover {
+      &:not(.-disabled):hover {
         opacity: .66;
+      }
+      &.-disabled {
+        pointer-events: none;
       }
     }
   }
