fixing checkbox styles

--- a/app/scripts/components/Checkbox/checkbox-style.scss
+++ b/app/scripts/components/Checkbox/checkbox-style.scss
@@ -5,7 +5,8 @@
     font-weight: 700;
     text-transform: none;
     position: relative;
-    padding-left: 22px;
+    padding-left: 28px;
+    letter-spacing: 0.4px;
     line-height: 1;
     cursor: pointer;
     width: auto;
