--- a/app/scripts/components/Dropdown/dropdown-style.scss
+++ b/app/scripts/components/Dropdown/dropdown-style.scss
@@ -34,7 +34,7 @@
   .dropdown-list {
     width: 100%;
     margin-top: 0;
-    background-color: $medium-grey;
+    background-color: $white;
     list-style: none;
     padding: 0;
     border: $border-1;
