--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -1,7 +1,7 @@
 // Import global variables
 @import '../../../styles/variables';
 
-$checkbox-color: #87929a;
+$checkbox-color: #aea6a6;
 
 .c-search {
   display: flex;
@@ -72,6 +72,7 @@ $checkbox-color: #87929a;
       > label {
         color: $link-font-color;
         font-size: $font-size-xsmall;
+
         > span {
           width: 16px;
           height: 16px;
