--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -33,10 +33,10 @@
       <nav class="nav -secondary">
         <ul>
           <router-link active-class="-active" tag="li" to="/examples/1" exact>
-            <a>Regions with greatests water risks</a>
+            <a>Conflicts related to protected areas</a>
           </router-link>
           <router-link active-class="-active" tag="li" to="/examples/2" exact>
-            <a>Conflicts related to protected areas</a>
+            <a>Regions with greatest water risk</a>
           </router-link>
         </ul>
       </nav>
