--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -5,6 +5,7 @@ $white: #FFFFFF;
 $mexican-pink: #ff0065;
 $dark-grey: #2F2F2F;
 $gold-yellow: #EFA600;
+$bright-yellow: #ffd722;
 $lightgrey: #F3F3F3;
 $grey: grey;
 $medium-grey: #E8E8E8;
