--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -85,7 +85,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 100%;
-  color: $black;
+  color: white;
   font-weight: 500;
   font-size: 12px;
   padding: 10px;
