--- a/app/scripts/components/Sidebar/sidebar-style.scss
+++ b/app/scripts/components/Sidebar/sidebar-style.scss
@@ -3,7 +3,6 @@
 .c-sidebar {
   background-color: $white;
   position: absolute;
-  width: 333px;
   bottom: rem(70);
   right: $visualization-padding-side;
   z-index: 101;
@@ -69,11 +68,11 @@
     height: rem(12);
     border-right: rem(2) solid $white;
     border-bottom: rem(2) solid $white;
-    transform: translateY(-2px) rotate(45deg);
+    transform: translateY(3px) rotate(-135deg);
     transition: all .2s ease-out;
 
     &.-active {
-      transform: translateY(3px) rotate(-135deg);
+      transform: translateY(-2px) rotate(45deg);
     }
   }
 }
@@ -92,7 +91,7 @@
 }
 
 .layers-switch {
-  padding: 30px;
+  padding: rem(22);
 }
 
 .c-legend {
@@ -204,9 +203,11 @@
 }
 
 .legend-spec {
-  padding: 30px;
+  padding: rem(22);
   background-color: $lightgrey;
   border-top: rem(2) solid #aea6a6;
+  max-height: rem(200);
+  overflow: auto;
 
   .c-legend {
     margin-top: 0;
@@ -225,6 +226,10 @@
 
     &.-yellow {
       background-color: $gold-yellow;
+    }
+
+    &.-bright-yellow {
+      background-color: $bright-yellow;
     }
 
     &.-ia { background-color: #fdc2b1; }
