--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -8,7 +8,7 @@
   >
   </multiselect> -->
   <div class="sidebar-title">
-    <h4>GLAD - iTerra Alerts</h4>
+    <h4>Conflicts related to conlict areas</h4>
     <button type="button" @click="openSidebar">
       <div class="viel"></div>
       <span v-bind:class="arrowOpen"></span>
@@ -19,26 +19,10 @@
       <ul class="c-legend">
         <li class="legend-item">
           <div class="switch">
-            <input type="checkbox" name="forests" @click="toggleLayer">
-            <span class="toggle"></span>
-          </div>
-          Confirmed Deforestation Areas
-        </li>
-
-        <li class="legend-item">
-          <div class="switch">
             <input type="checkbox" name="protected" @click="toggleLayer">
             <span class="toggle"></span>
           </div>
           Protected Areas
-        </li>
-
-        <li class="legend-item">
-          <div class="switch -hidden">
-            <input type="checkbox" name="alerts" @click="toggleLayer">
-            <span class="toggle"></span>
-          </div>
-          Deforestation Alerts
         </li>
         <spinner-component :loading="layerLoading" :overlay="true" class="-absolute"></spinner-component>
       </ul>
@@ -46,57 +30,13 @@
     <div class="legend-spec">
       <ul class="c-legend">
         <li class="legend-item">
-          <span class="spec -dot -yellow"></span>
-          Deforestation Alerts
+          <span class="spec -square -bright-yellow"></span>
+          Protected Areas Surface
         </li>
 
-        <li class="legend-item -list">
-          <button ref="protectedAreas" @click="showLayerLegend">
-            <span class="arrow"></span>
-            Protected Areas
-          </button>
-          <ul>
-            <li class="legend-item">
-              <span class="spec -square -ia"></span>
-              Ia
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -ib"></span>
-              Ib
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -ii"></span>
-              II
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -iii"></span>
-              III
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -iv"></span>
-              IV
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -v"></span>
-              V
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -vi"></span>
-              VI
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -notApplicable"></span>
-              Not Applicable
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -notAssigned"></span>
-              Not Assigned
-            </li>
-            <li class="legend-item">
-              <span class="spec -square -notReported"></span>
-              Not Reported
-            </li>
-          </ul>
+        <li class="legend-item">
+          <span class="spec -dot -yellow"></span>
+          Events or conflicts
         </li>
 
         <spinner-component :loading="layerLoading" :overlay="true" class="-absolute"></spinner-component>
