added hightligh support

--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -4,7 +4,7 @@
   </div>
 
   <pre class="console-content">
-    <code>{{snippet}}</code>
+    <code ref="snippet">{{snippet}}</code>
   </pre>
 
 </div>
