fixing vizz log height

--- a/app/scripts/components/Footer/footer-style.scss
+++ b/app/scripts/components/Footer/footer-style.scss
@@ -22,9 +22,11 @@
 
   .sdg-logo {
     width: 213px;
+    height: 58px;
   }
   .vizz-logo svg{
     width: 89px;
+    height: 21px;
     fill: #64d1b8;
   }
 }
