--- a/app/scripts/components/Visualization/visualization-template.html
+++ b/app/scripts/components/Visualization/visualization-template.html
@@ -5,9 +5,9 @@
     </router-link>
     <h2 class="header-title">Forests in conflict</h2>
   </header> -->
-  <button @click="toggleModal" class="share-button" type="button">
+  <!-- <button @click="toggleModal" class="share-button" type="button">
     <icon-component class="-small" name="icon-share"></icon-component>
-  </button>
+  </button> -->
   <sidebar-component></sidebar-component>
   <map-component></map-component>
   <map-footer-component></map-footer-component>
