--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -27,7 +27,7 @@
 
         <li class="legend-item">
           <div class="switch">
-            <input type="checkbox" name="protected" @click="toggleLayer">
+            <input type="checkbox" name="protected" id="protected" @click="toggleLayer">
             <span class="toggle"></span>
           </div>
           Protected Areas
