--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -8,7 +8,7 @@
   >
   </multiselect> -->
   <div class="sidebar-title">
-    <h4>Conflicts related to conlict areas</h4>
+    <h4>Conflicts related to protected areas</h4>
     <button type="button" @click="openSidebar">
       <div class="viel"></div>
       <span v-bind:class="arrowOpen"></span>
