--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -32,7 +32,7 @@
             <a>Conflicts related to protected areas</a>
           </router-link>
           <router-link active-class="-active" tag="li" to="/examples/2" exact>
-            <a class="-disabled">Regions with greatests water risks</a>
+            <a>Regions with greatests water risks</a>
           </router-link>
         </ul>
       </nav>
