--- a/app/scripts/components/Footer/footer-style.scss
+++ b/app/scripts/components/Footer/footer-style.scss
@@ -14,6 +14,7 @@
     justify-content: space-between;
     align-items: center;
     list-style-type: none;
+    padding: 0;
 
     a {
       display: block;
