--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -10,5 +10,10 @@
   font-family: 'proxima-nova';
   src: url('../fonts/proxima-nova/proxima_nova_reg.woff2') format('woff2'),
   url('../fonts/proxima-nova/proxima_nova_reg.woff') format('woff');
+}
 
+@font-face {
+  font-family: 'proxima-nova-extrabold';
+  src: url('../fonts/proxima-nova/proximanova-extrabold.woff2') format('woff2'),
+  url('../fonts/proxima-nova/proximanova-extrabold.woff') format('woff');
 }
