--- a/app/scripts/components/OtherVisualization/Map/map-style.scss
+++ b/app/scripts/components/OtherVisualization/Map/map-style.scss
@@ -1,96 +1,97 @@
 @import '../../../../styles/variables';
+@import '../../Map/map-style.scss';
 
-.l-map {
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
+// .l-map {
+//   position: absolute;
+//   top: 0; left: 0; bottom: 0; right: 0;
+// }
 
-.c-map {
-  z-index: 100;
-}
+// .c-map {
+//   z-index: 100;
+// }
 
-#map {
-  width: 100%;
-  height: 100%;
-}
+// #map {
+//   width: 100%;
+//   height: 100%;
+// }
 
-/*
-  Leaflet override
-*/
-#map.leaflet-container {
-  .leaflet-popup {
-    .leaflet-popup-content-wrapper {
-      border-radius: 0;
-    }
-  }
+// /*
+//   Leaflet override
+// */
+// #map.leaflet-container {
+//   .leaflet-popup {
+//     .leaflet-popup-content-wrapper {
+//       border-radius: 0;
+//     }
+//   }
 
-  .leaflet-control-container {
-    .leaflet-left {
-      left: auto!important;
-      right: rem(72) !important;
-    }
+//   .leaflet-control-container {
+//     .leaflet-left {
+//       left: auto!important;
+//       right: rem(72) !important;
+//     }
 
-    .leaflet-top {
-      top: rem(186)!important;
-      z-index: 9999999999!important;
-    }
-  }
+//     .leaflet-top {
+//       top: rem(186)!important;
+//       z-index: 9999999999!important;
+//     }
+//   }
 
-  .leaflet-bar {
-    border: 0;
-    border-radius: 0!important;
+//   .leaflet-bar {
+//     border: 0;
+//     border-radius: 0!important;
 
-    & a {
-      border: 1px solid $mexican-pink !important;
-      border-radius: 0!important;
-      color: $mexican-pink;
-      background-color: transparent;
-      font-weight: lighter;
-      line-height: rem(31);
-      width: 35px;
-      height: 35px;
+//     & a {
+//       border: 1px solid $mexican-pink !important;
+//       border-radius: 0!important;
+//       color: $mexican-pink;
+//       background-color: transparent;
+//       font-weight: lighter;
+//       line-height: rem(31);
+//       width: 35px;
+//       height: 35px;
 
-      &:first-child {
-        margin-bottom: rem(7);
-      }
-    }
-  }
-}
+//       &:first-child {
+//         margin-bottom: rem(7);
+//       }
+//     }
+//   }
+// }
 
-/*
-  -- Map markers --
-*/
-.c-marker-bubble {
-  background-color: $gold-yellow;
-  border-radius: 100%;
-  box-shadow: 0px 0px 0px 6px rgba($gold-yellow, 0.5);
-  transition: all .3s ease;
+// /*
+//   -- Map markers --
+// */
+// .c-marker-bubble {
+//   background-color: $gold-yellow;
+//   border-radius: 100%;
+//   box-shadow: 0px 0px 0px 6px rgba($gold-yellow, 0.5);
+//   transition: all .3s ease;
 
-  &:hover {
-    box-shadow: 0 0 3px 1px rgba(0,0,0,.15);
-    z-index: 1000 !important;
-  }
+//   &:hover {
+//     box-shadow: 0 0 3px 1px rgba(0,0,0,.15);
+//     z-index: 1000 !important;
+//   }
 
-  .marker-bubble-inner {
-    display: none;
-  }
-}
+//   .marker-bubble-inner {
+//     display: none;
+//   }
+// }
 
-.c-marker-cluster-bubble {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  color: $black;
-  font-weight: 500;
-  font-size: 12px;
-  padding: 10px;
-  background-color: $gold-yellow;
-  box-shadow: 0px 0px 0px 8px rgba($gold-yellow, 0.5);
-  transition: all .3s ease;
+// .c-marker-cluster-bubble {
+//   display: flex !important;
+//   justify-content: center;
+//   align-items: center;
+//   border-radius: 100%;
+//   color: $black;
+//   font-weight: 500;
+//   font-size: 12px;
+//   padding: 10px;
+//   background-color: $gold-yellow;
+//   box-shadow: 0px 0px 0px 8px rgba($gold-yellow, 0.5);
+//   transition: all .3s ease;
 
-  &:hover {
-    box-shadow: 0 0 6px 1px rgba(black, 0.3);
-    z-index: 1000 !important;
-  }
-}
+//   &:hover {
+//     box-shadow: 0 0 6px 1px rgba(black, 0.3);
+//     z-index: 1000 !important;
+//   }
+// }
