--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -38,6 +38,7 @@ $theme-alternative: $black;
 
 // General Settings
 $base-font-family: "proxima-nova", Helvetica, Arial, sans-serif;
+$base-font-family-bold: 'proxima-nova-extrabold', Helvetica, Arial, sans-serif;
 $base-font-size: $font-size-normal;
 $base-line-height: 1.5;
 
