--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -28,10 +28,10 @@
     <div class="header-wrapper">
       <nav class="nav -secondary">
         <ul>
-          <router-link active-class="-active" tag="li" to="/examples/1" exact>
+          <router-link active-class="-active" tag="li" to="/examples/conflicts-related-to-protected-areas" exact>
             <a>Conflicts related to protected areas</a>
           </router-link>
-          <router-link active-class="-active" tag="li" to="/examples/2" exact>
+          <router-link active-class="-active" tag="li" to="/examples/regions-with-greatests-water-risks" exact>
             <a>Regions with greatests water risks</a>
           </router-link>
         </ul>
