--- a/app/scripts/components/OtherVisualization/ToggleMenu/style.scss
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/style.scss
@@ -99,6 +99,9 @@
     font-weight: normal;
     text-align: right;
     vertical-align: top;
+    &:first-child {
+      padding-left: 5rem;
+    }
   }
   td {
     text-align: right;
