--- a/app/scripts/components/OtherVisualization/ToggleMenu/template.html
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/template.html
@@ -9,21 +9,15 @@
       <table class="ranking-table">
         <thead>
           <tr>
-            <th>&nbsp;</th>
-            <th>% Surface of Water Lost</th>
+            <th colspan="2">Permanent surface water area lost (ha)</th>
             <th>Large Population</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td><span>1</span>Europe</td>
-            <td>20%</td>
-            <td>2.000</td>
-          </tr>
-          <tr>
-            <td><span>2</span>South America</td>
-            <td>20%</td>
-            <td>2.000</td>
+          <tr v-for="(basin, index) in basins">
+            <td><span>{{index + 1}}</span>{{basin.basin_name}}</td>
+            <td>{{basin.water}}</td>
+            <td>{{basin.pop}}</td>
           </tr>
       </table>
     </div>
