--- a/app/scripts/components/OtherVisualization/ToggleMenu/style.scss
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/style.scss
@@ -102,6 +102,9 @@
     &:first-child {
       padding-left: 5rem;
     }
+    span {
+      cursor: pointer;
+    }
   }
   td {
     text-align: right;
