changes map cluster color

--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables';
 
 // Local Vars
-$bubble-cluster-color: #FFEA19;
+$bubble-cluster-color: #E8D717;
 $bubble-cluster-font-color: #483805;
 
 .l-map {
