changes legend color

--- a/app/scripts/components/Sidebar/sidebar-style.scss
+++ b/app/scripts/components/Sidebar/sidebar-style.scss
@@ -250,8 +250,8 @@
       }
     }
 
-    &.-bright-yellow {
-      background-color: $bright-yellow;
+    &.-pink {
+      background-color: #CC0051;
     }
 
     &.-ia { background-color: #fdc2b1; }
