--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -22,7 +22,7 @@
     <div class="legend-spec">
       <ul class="c-legend">
         <li class="legend-item">
-          <span class="spec -square -bright-yellow"></span>
+          <span class="spec -square -pink"></span>
           Protected Areas Surface
         </li>
 
