--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -17,3 +17,8 @@
   src: url('../fonts/proxima-nova/proximanova-extrabold.woff2') format('woff2'),
   url('../fonts/proxima-nova/proximanova-extrabold.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'proxima-nova-semibold';
+  src: url('../fonts/proxima-nova/proxima_nova_semi_bold.woff') format('woff');
+}
