adds custom  google analytics interaction listeners

--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -11,7 +11,7 @@
       <ul class="c-legend">
         <li class="legend-item">
           <div class="switch">
-            <input type="checkbox" name="protected" ref="protected" @click="toggleLayer">
+            <input type="checkbox" name="protected_areas" ref="protected_areas" @click="toggleLayer">
             <span class="toggle"></span>
           </div>
           Protected Areas
